Fix numbered lists in IE7 and below
Increase padding for IE7 and below to fix numbers being cut off.

--- a/public/sass/elements/_lists.scss
+++ b/public/sass/elements/_lists.scss
@@ -16,7 +16,10 @@ ol {
 // Numbered lists
 .list-number {
   list-style-type: decimal;
-  margin-left: 25px;
+  padding-left: 20px;
+  @include ie-lte(7) {
+    padding-left: 28px;
+  }
 }
 
 .list-bullet,
